--- a/.gitignore
+++ b/.gitignore
@@ -104,4 +104,5 @@ LearningMethods/Regression/d.pickle
 LearningMethods/Regression/svr.pickle
 LearningMethods/Regression/e.pickle
 LearningMethods/others_for_time_prediction
+LearningMethods/Regression
 Microbiome_Intervention/new_microbiome_intervention/results/
